# eucalyptus-gumnut

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/client/: mod.rs
src/daemon/: mod.rs
src/window/: mod.rs
src/window/item/: mod.rs  power_profile.rs
