[package]
name = "eucalyptus-gumnut"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
gpui = { git = "https://github.com/zed-industries/zed.git", default-features = false, features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", features = ["wayland"] }
nix = { version = "0.31.2", features = ["user"] }
serde = "1.0.228"
smol = "2.0.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zbus = "5.14.0"

[lints.clippy]
semicolon_if_nothing_returned = "warn"
